k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decase-fe
  namespace: sk-team-08
spec:
  selector:
    app: decase-fe
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
